--- a/index.html
+++ b/index.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whiskey Drop | Taste a new whiskey every month</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous">
+    </script>
 </head>
+
 <body>
     <article class="container">
         <!-- Callout -->
         <section class="callout">
             <h1>The finest whiskeys delivered to your doorstep.</h1>
-            <p>Sign up today to start receiving the world's best whiskeys every month. 
+            <p>Sign up today to start receiving the world's best whiskeys every month.
                 <s>€19.99</s><strong><mark>First one is free!</mark></strong></p>
-                <button type="button" class="btn btn-success btn-lg">Sign Up!</button>
-                <p class="text-muted"><small>You must be over 18 to sign up to our service. Please drink responsibly.</small></p>
+            <button type="button" class="btn btn-success btn-lg">Sign Up!</button>
+            <p class="text-muted"><small>You must be over 18 to sign up to our service. Please drink
+                    responsibly.</small></p>
         </section>
         <!-- /.callout -->
         <hr>
@@ -31,7 +37,7 @@
             <dblockquote class="blockquote">
                 <p>I haven't been sober for months!</p>
                 <p>- Jane Doe</p>
-            </blockquote>
+                </blockquote>
         </section>
         <!-- /.quotes -->
         <hr>
@@ -41,22 +47,79 @@
             <h2 class=" text-uppercase">Features:</h2>
             <div class="feature">
                 <h3>Feature 1</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat.</p>
                 <p><button type="button" class="btn btn-light">Read More</button></p>
             </div>
             <div class="feature">
                 <h3>Feature 2</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat.</p>
                 <p><button type="button" class="btn btn-light">Read More</button></p>
-                
+
             </div>
             <div class="feature">
                 <h3>Feature 3</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat.</p>
                 <p><button type="button" class="btn btn-light">Read More</button></p>
             </div>
         </section>
         <!-- /.features -->
+        <section class="quote">
+
+            <table class="table-secondary">
+                <h2> Monthly favorites:</h2>
+            </table>
+            </table>
+            <table class="table table-dark table-hover">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Origin</th>
+
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>Campari</td>
+                        <td>USA</td>
+
+                    </tr>
+                    <tr>
+                        <th scope="row">2</th>
+                        <td>Diageo</td>
+                        <td>Canada</td>
+
+                    </tr>
+                    <tr>
+                        <th scope="row">3</th>
+                        <td>Eddu Gray</td>
+                        <td>French</td>
+
+                    </tr>
+                    <tr>
+                        <th scope="row">4</th>
+                        <td>Schlitzer Destillerie</td>
+                        <td>Germany</td>
+
+                    </tr>
+                    <tr>
+                        <th scope="row">5</th>
+                        <td>Jameson</td>
+                        <td>Irland</td>
+
+                    </tr>
+                </tbody>
+            </table>
+
+            </blockquote>
+        </section>
     </article>
 </body>
 
